# graddft-qnn

./: .gitignore  .pre-commit-config.yaml  R.ipynb  README.md  _report.json  ansatz_3__90_deg_x_rot]_[_180_deg_x_rot]_[_270_deg_x_rot]_[_180_deg_y_rot]_[_180_deg_z_rot]_[y_eq_z_rot]_[y_eq_neg_z_rot_qubits.txt  ansatz_6__180_deg_x_rot_qubits.txt  ansatz_6__180_deg_x_rot_qubits.txt.pkl  ansatz_6__90_deg_x_rot]_[_180_deg_x_rot]_[_270_deg_x_rot]_[_180_deg_y_rot]_[_180_deg_z_rot]_[y_eq_z_rot]_[y_eq_neg_z_rot_qubits.txt  ansatz_6__90_deg_x_rot]_[_180_deg_x_rot]_[_270_deg_x_rot_qubits.txt  ansatz_6__90_deg_x_rot]_[_180_deg_x_rot]_[_270_deg_x_rot_qubits.txt.pkl  ansatz_9__180_deg_x_rot_qubits.txt  ansatz_9__180_deg_x_rot_qubits.txt.pkl  ansatz_9__90_deg_x_rot]_[_180_deg_x_rot]_[_270_deg_x_rot]_[_180_deg_y_rot]_[_180_deg_z_rot]_[y_eq_z_rot]_[y_eq_neg_z_rot_qubits.txt  ansatz_9_qubits.txt  candle_stick.py  circuit_design.ipynb  classical_with_down.json  config.yaml  consolidate_report.py  eda.ipynb  example.py  full_ansatz_9__180_deg_x_rot_qubits.txt  group_rep.ipynb  json_to_xlsx.py  log.txt  main_2.py  plot_qubits_group_ansatz_length.py  pyproject.toml  qcnn.ipynb  qcnn_draft.py  report.json  report.xlsx  train_test_qubits_plot.py
graddft_qnn/: Box_Plot.py  Classical.py  Classical_No_Down.py  Evaluate_Only.py  H2_Classical.py  ansatz.py  ansatz_9__180_deg_x_rot_qubits.pkl  ansatz_9__180_deg_x_rot_qubits.txt  custom_gates.py  data.py  data_loader.py  dft_qnn.py  dft_tn.py  exp.py  gates.py  generate_cube.py  inference.py  main.py  naive_dft_qnn.py  pca.py  qnn_functional.py  reference_imp.py  report.json  report.xlsx  (+4 more)
(+96 files in other folders)
