[tool.poetry]
name = "graddft-qnn"
version = "0.1.0"
description = ""
authors = ["Your Name <minh.triet.chau@dsv.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
grad-dft = {git = "git@github.com:XanaduAI/GradDFT"}
pyscf = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
