[tool.poetry]
name = "graddft-qnn"
version = "0.1.0"
description = ""
authors = ["Minh Chau <minhtriet09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
grad-dft = {git = "git@github.com:XanaduAI/GradDFT"}
pyscf = "^2.7.0"
numpy = "1.24.1"
jax = "0.4.23"
jaxlib = "0.4.23"
scipy = "1.12.0"
pennylane = "0.39.0"
ruff = "^0.8.3"
tqdm = "^4.67.1"
scikit-learn = "^1.6.0"
pcax = "^0.1.0"
optax = "0.2.1"
ase = "^3.24.0"
rdkit = "^2024.9.4"
mlcroissant = "^1.0.12"
requests = "^2.32.3"
aiohttp = "^3.11.14"
datasets = "^3.4.1"
openpyxl = "^3.1.5"
pre-commit = "^4.2.0"


[tool.poetry.group.macos]
optional = true

[tool.poetry.group.macos.dependencies]
tensorflow-metal = "1.1.0"
tensorflow-macos = "2.14.0"


[tool.poetry.group.data_explore]
optional = true

[tool.poetry.group.data_explore.dependencies]
jupyterlab = "^4.3.4"
matplotlib = "^3.10.0"
ipympl = "^0.9.6"

[tool.ruff]
line-length = 88
show-fixes = true
indent-width = 4
target-version = "py310"
lint.select = ["W", "E", "I", "F", "UP", "PL"]
lint.ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
